[project]
name = "btutils"
version = "0.1.2"
description = "A lightweight Python library for backtesting analysis and visualization of trading strategies"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "matplotlib>=3.3.0",
    "pandas>=1.0.0",
    "scipy>=1.5.0",
    "seaborn>=0.11.0",
    "tabulate>=0.8.0",
]
